# newnoise

./: .gitignore  README.md  pyproject.toml
src/: setup.py
src/newnoise/: __init__.py  cleaners.py  cli.py  data.py  download.py  handlers.py  matchers.py  transforms.py
src/newnoise/aws/: __init__.py  commands.py  data.py  db.py  env.py  products.py  transforms.py
src/newnoise/sheet/: __init__.py  attributes.py  commands.py  env.py  handlers.py  matchers.py  transforms.py
