[project]
name = "newnoise"
version = "0.1.1"
description = "It loads noisy data from one place, mutates it, and writes new noise to some other place."
authors = [
    { name = "Jms Dnns", email = "jdennis@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]
dependencies = [
    "json_stream",
    "aiohttp",
    "aiodns",
]

[project.scripts]
newnoise = "newnoise.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newnoise"]